# surrealdb-rust-app

./: .env  Cargo.toml
src/: main.rs
src/core/: auth.rs  mod.rs  posts.rs  users.rs
src/db_pool/: mod.rs  posts.rs  users.rs  utils.rs
src/http_server/: mod.rs
src/http_server/api/: auth.rs  mod.rs  posts.rs  users.rs
src/http_server/middleware/: session.rs
src/session/: mod.rs
