[package]
name = "surreal-rust-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.23"
dotenv = "0.15.0"
futures-util = "0.3.26"
jsonwebtoken = "8.2.0"
pwhash = "1.0.0"
rand = "0.8.5"
serde = "1.0.152"
serde_json = "1.0.94"
surrealdb = "1.0.0-beta.8"
